Fix pixelated smiley on mobile devices

--- a/style.css
+++ b/style.css
@@ -189,11 +189,19 @@ select {
   position: relative;
   opacity: 0;
   transition: opacity 0.5s ease;
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
+  transform: translateZ(0) scale(1);
+  -webkit-transform: translateZ(0) scale(1);
+  -moz-transform: translateZ(0) scale(1);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+  will-change: opacity;
 }
 
 .circle-grow .smiley-face {
@@ -207,11 +215,17 @@ select {
   background-color: #ffffff;
   border-radius: 50%;
   top: 30%;
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
+  transform: translateZ(0) scale(1);
+  -webkit-transform: translateZ(0) scale(1);
+  -moz-transform: translateZ(0) scale(1);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -moz-crisp-edges;
+  will-change: transform;
 }
 
 .eye-left {
@@ -231,14 +245,19 @@ select {
   border-radius: 0 0 0.2rem 0.2rem;
   bottom: 25%;
   left: 50%;
-  transform: translateX(-50%) translateZ(0);
-  -webkit-transform: translateX(-50%) translateZ(0);
-  -moz-transform: translateX(-50%);
+  transform: translateX(-50%) translateZ(0) scale(1);
+  -webkit-transform: translateX(-50%) translateZ(0) scale(1);
+  -moz-transform: translateX(-50%) translateZ(0) scale(1);
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -moz-crisp-edges;
+  will-change: transform;
 }
 
 .circle-wrap {
